[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-mcp-scheduler-ldraney"
version = "0.1.1"
description = "Standalone MCP server for LinkedIn post scheduling with a publisher daemon"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Lucas Draney", email = "107153866+ldraney@users.noreply.github.com"},
]
keywords = ["linkedin", "mcp", "scheduler", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Communications",
]
dependencies = [
    "mcp>=1.0",
    "ldraney-linkedin-sdk>=0.1.0",
    "keyring>=25.0",
    "httpx>=0.24",
]

[project.urls]
Repository = "https://github.com/ldraney/linkedin-mcp-scheduler"
Issues = "https://github.com/ldraney/linkedin-mcp-scheduler/issues"

[project.scripts]
linkedin-mcp-scheduler = "linkedin_mcp_scheduler.server:main"
linkedin-mcp-scheduler-daemon = "linkedin_mcp_scheduler.daemon:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit real LinkedIn API (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"
